use stateless version of Identity

--- a/modules/camel/pom.xml
+++ b/modules/camel/pom.xml
@@ -22,7 +22,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <camel.version>2.11.1</camel.version>
         <!-- PicketLink dependency versions -->
-        <version.picketlink.javaee.bom>2.6.0.CR1</version.picketlink.javaee.bom>
+        <version.picketlink.javaee.bom>2.6.0-SNAPSHOT</version.picketlink.javaee.bom>
         <junit.version>4.10</junit.version>
         <weld.version>2.1.0.Final</weld.version>
         <drools.version>6.0.0.CR4</drools.version>
